[package]
name = "socker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

[[bin]]
name = "socker"
path = "src/socker/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
